<resources>
    <string name="app_name">Quiz_app</string>
    <string name="next_question">Next Question</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="quit">Quit</string>
    <string name="questions">Questions</string>
    <string name="your_score">Your Score</string>
    <string name="_0">0</string>
</resources>